[gd_scene load_steps=4 format=2]

[ext_resource path="res://Entities/Builders/GameBuilder.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main/Main.gd" type="Script" id=2]
[ext_resource path="res://Screens/MainScreens.tscn" type="PackedScene" id=3]

[node name="Main" type="Node"]
script = ExtResource( 2 )

[node name="MainScreens" parent="." instance=ExtResource( 3 )]

[node name="GameBuilder" parent="." instance=ExtResource( 1 )]

[node name="FinalScreen" type="Node" parent="."]
[connection signal="start_game" from="MainScreens" to="." method="_on_MainScreens_start_game"]
