[gd_scene load_steps=3 format=2]

[ext_resource path="res://Main/Game.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main/Main.gd" type="Script" id=2]

[node name="Main" type="Node"]
script = ExtResource( 2 )

[node name="Game" parent="." instance=ExtResource( 1 )]
[connection signal="game_ended" from="Game" to="." method="_on_Game_game_ended"]
